--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Heena's Pickle</title>
 
     <link
       rel="stylesheet"
@@ -52,15 +52,47 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <div class="navbar">
+      <img src="../src/img.png" alt="Heena's pickle logo">
+      <br>
+      <br><br><br>
+      Navbar Home 
+      <button class="btn">GET IN TOUCH</button>
+  </div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  <div class="product">
+      <h1>Our Products</h1>
+      <HomeContainer/>
+  </div>
+
+  <div class="product">
+       <h1>How to Choose Flavours?</h1>
+   </div>
+  
+   <div class="choose">
+       <h2>Why Choose Us</h2>
+   </div>
+  
+   <div class="about">
+       <h1>About Us</h1>
+   </div>
+
+   <div class="text-center">
+       <h2>Customer Favourites</h2>
+   </div>
+
+   <div class="text-color">
+       <h1>Types of Indian Pickles You Must Try</h1>
+   </div>
+
+   <div class="navbar footer">
+       <img src="../src/img.png" alt="Heena's pickle logo"> 
+       <h4>About Us</h4>
+   </div>
+
+   <footer class="footer">
+        © Copyright 2023. All Rights Reserved.
+   </footer>
   </body>
 </html>
