--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,10 @@
     <div id="root"></div>
 
     <div class="navbar">
-      <img src="../src/img.png" alt="Heena's pickle logo">
-      <br>
-      <br><br><br>
-      Navbar Home 
+      <img src="../src/img.png" alt="Heena's pickle logo" class="img" height="90px" width="150px"><br>
+      <div>
+          ANY TIME IS A GOOD <br> TIME FOR A <br> <id>PICKLE</id> 
+      </div>
       <button class="btn">GET IN TOUCH</button>
   </div>
 
