--- a/public/index.html
+++ b/public/index.html
@@ -53,46 +53,59 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <div class="navbar">
-      <img src="../src/img.png" alt="Heena's pickle logo" class="img" height="90px" width="150px"><br>
-      <div>
-          ANY TIME IS A GOOD <br> TIME FOR A <br> <id>PICKLE</id> 
+    <section>
+      <div class="navbar">
+        <div class="nav-left">
+          <img src="../src/images/Logo.png" alt="logo" class="img" height="90px" width="150px"/>
+          <ul>
+            <a href="#"><li>Home</li></a>
+            <a href="#"><li>AboutUs</li></a>
+            <a href="#"><li>Products</li></a>
+            <a href="#"><li>Blog</li></a>
+            <a href="#"><li>Contact</li></a>
+          </ul>
+        </div>
+        <div>
+          <button class="btn">Get in Touch</button>
+        </div>
+          <img src="../src/images/Heena-5 11.png" class="d" />
+          <img src="../src/images/Person.png" class="p"/>
       </div>
-      <button class="btn">GET IN TOUCH</button>
-  </div>
-
-  <div class="product">
+    </section>
+    <div class="product">
       <h1>Our Products</h1>
       <HomeContainer/>
-  </div>
+    </div>
 
-  <div class="product">
-       <h1>How to Choose Flavours?</h1>
-   </div>
+    <div class="product">
+      <h1>How to Choose Flavours?</h1>
+    </div>
+
+    <div class="choose">
+      <h2>Why Choose Us</h2>
+    </div>
+
+    <div class="about">
+      <h1>About Us</h1>
+    </div>
+
+    <div class="text-center">
+      <h2>Customer Favourites</h2>
+    </div>
+
+    <div class="text-color">
+      <h1>
+        <p>Types of Indian Pickles</p>
+        <p></p>You Must Try</p>
+      </h1>
+    </div>
+
+    <div class="navbar">
+      <img src="./images/Logo.png" alt="Heena's pickle logo" height="90px" width="150px"/>
+      <h4>About Us</h4>
+    </div>
+
+    <footer class="footer">© Copyright 2023. All Rights Reserved.</footer>
   
-   <div class="choose">
-       <h2>Why Choose Us</h2>
-   </div>
-  
-   <div class="about">
-       <h1>About Us</h1>
-   </div>
-
-   <div class="text-center">
-       <h2>Customer Favourites</h2>
-   </div>
-
-   <div class="text-color">
-       <h1>Types of Indian Pickles You Must Try</h1>
-   </div>
-
-   <div class="navbar footer">
-       <img src="../src/img.png" alt="Heena's pickle logo"> 
-       <h4>About Us</h4>
-   </div>
-
-   <footer class="footer">
-        © Copyright 2023. All Rights Reserved.
-   </footer>
   </body>
 </html>
